--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "mongoose": "^8.1.0"
