--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
     "mongoose": "^8.1.0"
   },
   "engines": {
