--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # .env
 
-MONGODB_URI=mongodb+srv://Secunity:Secunity282@cluster0.4kv16wv.mongodb.net/secunity?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://Secunity:Secunity282@cluster0.4kv16wv.mongodb.net/secunity?retryWrites=true&w=majority
